--- a/pdfchatbotopenvino.ipynb
+++ b/pdfchatbotopenvino.ipynb
@@ -262,7 +262,9 @@
         "import nltk\n",
         "import gradio as gr\n",
         "import tempfile\n",
-        "import os"
+        "import os\n",
+        "import traceback\n",
+        "from google.colab import files"
       ],
       "metadata": {
         "colab": {
@@ -296,7 +298,8 @@
     {
       "cell_type": "code",
       "source": [
-        "nltk.download('punkt', quiet=True)"
+        "nltk.download('punkt', quiet=True)\n",
+        "nltk.download('punkt_tab', quiet=True)"
       ],
       "metadata": {
         "colab": {
@@ -331,18 +334,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Function to read PDF Document\n",
-        "\n",
+        "# Function to Read PDF Document\n",
         "def read_pdf(file_path):\n",
-        "    with open(file_path, 'rb') as file:\n",
-        "        reader = PyPDF2.PdfReader(file)\n",
-        "        text = \"\"\n",
-        "        for page in reader.pages:\n",
-        "            text += page.extract_text() + \"\\n\"\n",
-        "    return text\n",
+        "    try:\n",
+        "        if isinstance(file_path, str):\n",
+        "            with open(file_path, 'rb') as file:\n",
+        "                reader = PyPDF2.PdfReader(file)\n",
+        "                text = \"\"\n",
+        "                for page in reader.pages:\n",
+        "                    text += page.extract_text() + \"\\n\"\n",
+        "        else:\n",
+        "            # Handle file-like objects (e.g., from Colab upload)\n",
+        "            reader = PyPDF2.PdfReader(file_path)\n",
+        "            text = \"\"\n",
+        "            for page in reader.pages:\n",
+        "                text += page.extract_text() + \"\\n\"\n",
+        "        return text\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error reading PDF: {e}\")\n",
+        "        return \"\"\n",
         "\n",
-        "# Function to create semantic chunks from text\n",
-        "\n",
+        "# Function to Create Semantic Chunks from Text\n",
         "def create_semantic_chunks(text, chunk_size=1000, overlap=200):\n",
         "    sentences = nltk.sent_tokenize(text)\n",
         "    chunks = []\n",
@@ -357,8 +369,7 @@
         "        chunks.append(current_chunk)\n",
         "    return chunks\n",
         "\n",
-        "# Function to create vector store from text\n",
-        "\n",
+        "# Function to Create Vector Store from Text\n",
         "def create_vector_store(text, chunk_size=1000, overlap=200):\n",
         "    chunks = create_semantic_chunks(text, chunk_size, overlap)\n",
         "    model = SentenceTransformer('all-MiniLM-L6-v2')\n",
@@ -386,8 +397,12 @@
     {
       "cell_type": "code",
       "source": [
+        "# Function to Set Up Chatbot\n",
         "def setup_chatbot(pdf_file):\n",
-        "    text = read_pdf(pdf_file.name)\n",
+        "    text = read_pdf(pdf_file)\n",
+        "    if not text:\n",
+        "        raise ValueError(\"Failed to extract text from PDF.\")\n",
+        "\n",
         "    index, chunks, embedding_model = create_vector_store(text)\n",
         "\n",
         "    model_name = \"TinyLlama/TinyLlama-1.1B-Chat-v1.0\"\n",
@@ -414,29 +429,26 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "# Function to Handle Chatbot Queries\n",
         "def chatbot(query, index, chunks, embedding_model, llm_model, tokenizer, k=3, max_input_length=1024, max_new_tokens=512):\n",
-        "\n",
-        "    # Find relevant chunks\n",
-        "\n",
+        "    # Find Relevant Chunks\n",
         "    query_vector = embedding_model.encode([query])\n",
         "    _, I = index.search(query_vector, k)\n",
         "    relevant_chunks = [chunks[i] for i in I[0]]\n",
         "\n",
         "    # Construct Prompt\n",
-        "\n",
         "    context = \"\\n\".join(relevant_chunks)\n",
         "    prompt = f\"Based on the following information from a PDF, answer the question.\\n\\nInformation: {context}\\n\\nQuestion: {query}\\n\\nAnswer:\"\n",
         "\n",
         "    # Generate Response\n",
-        "\n",
         "    input_ids = tokenizer.encode(prompt, return_tensors=\"pt\", truncation=True, max_length=max_input_length)\n",
         "    output = llm_model.generate(input_ids, max_new_tokens=max_new_tokens)\n",
         "    response = tokenizer.decode(output[0], skip_special_tokens=True)\n",
         "\n",
         "    # Extract Answer\n",
-        "\n",
         "    answer_start = response.find(\"Answer:\") + len(\"Answer:\")\n",
-        "    return response[answer_start:].strip()"
+        "    return response[answer_start:].strip()\n"
       ],
       "metadata": {
         "id": "2ibPHyDF9RR4"
@@ -456,6 +468,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Chatbot State Class\n",
         "class ChatbotState:\n",
         "    def __init__(self):\n",
         "        self.index = None\n",
@@ -485,17 +498,23 @@
     {
       "cell_type": "code",
       "source": [
-        "def upload_pdf(pdf_file):\n",
-        "    if pdf_file is None:\n",
-        "        return \"Please upload a PDF file.\"\n",
-        "\n",
+        "# Function to Upload and Process PDF\n",
+        "def upload_pdf_colab():\n",
         "    try:\n",
-        "        chatbot_state.index, chatbot_state.chunks, chatbot_state.embedding_model, chatbot_state.llm_model, chatbot_state.tokenizer = setup_chatbot(pdf_file)\n",
+        "        uploaded = files.upload()\n",
+        "        if not uploaded:\n",
+        "            return \"Please upload a PDF file.\"\n",
+        "\n",
+        "        pdf_file = next(iter(uploaded))\n",
+        "        with open(pdf_file, \"rb\") as f:\n",
+        "            chatbot_state.index, chatbot_state.chunks, chatbot_state.embedding_model, chatbot_state.llm_model, chatbot_state.tokenizer = setup_chatbot(f)\n",
         "        chatbot_state.pdf_uploaded = True\n",
         "        return \"PDF uploaded and processed successfully. You can now ask questions about its content.\"\n",
         "    except Exception as e:\n",
+        "        traceback.print_exc()\n",
         "        return f\"Error processing PDF: {str(e)}\"\n",
         "\n",
+        "# Function to Answer Questions\n",
         "def answer_question(question):\n",
         "    if not chatbot_state.pdf_uploaded:\n",
         "        return \"Please upload a PDF file first.\"\n",
@@ -504,8 +523,10 @@
         "        response = chatbot(question, chatbot_state.index, chatbot_state.chunks, chatbot_state.embedding_model, chatbot_state.llm_model, chatbot_state.tokenizer)\n",
         "        return response\n",
         "    except Exception as e:\n",
+        "        traceback.print_exc()\n",
         "        return f\"Error generating answer: {str(e)}\"\n",
         "\n",
+        "# Function to Restart Chatbot\n",
         "def restart_chatbot():\n",
         "    chatbot_state.index = None\n",
         "    chatbot_state.chunks = None\n",
@@ -517,7 +538,7 @@
         "    gc.collect()\n",
         "    torch.cuda.empty_cache() if torch.cuda.is_available() else None\n",
         "\n",
-        "    return \"Chatbot restarted. Please upload a new PDF.\", None, \"\", \"\""
+        "    return \"Chatbot restarted. Please upload a new PDF.\", \"\", \"\""
       ],
       "metadata": {
         "id": "bRBOEsWH9nl-"
@@ -537,10 +558,10 @@
     {
       "cell_type": "code",
       "source": [
+        "# Gradio Interface\n",
         "with gr.Blocks() as demo:\n",
         "    gr.Markdown(\"# PDF Chatbot\")\n",
         "    with gr.Row():\n",
-        "        pdf_input = gr.File(label=\"Upload PDF\", file_types=[\".pdf\"])\n",
         "        upload_button = gr.Button(\"Upload and Process\")\n",
         "    upload_output = gr.Textbox(label=\"Status\")\n",
         "\n",
@@ -551,9 +572,9 @@
         "\n",
         "    restart_button = gr.Button(\"Restart\")\n",
         "\n",
-        "    upload_button.click(upload_pdf, inputs=[pdf_input], outputs=[upload_output])\n",
+        "    upload_button.click(upload_pdf_colab, inputs=[], outputs=[upload_output])\n",
         "    answer_button.click(answer_question, inputs=[question_input], outputs=[answer_output])\n",
-        "    restart_button.click(restart_chatbot, inputs=[], outputs=[upload_output, pdf_input, question_input, answer_output])\n"
+        "    restart_button.click(restart_chatbot, inputs=[], outputs=[upload_output, question_input, answer_output])"
       ],
       "metadata": {
         "id": "q_AmvNHU90I5"
@@ -573,63 +594,42 @@
     {
       "cell_type": "code",
       "source": [
-        "demo.launch(share=True, debug=True)"
+        "demo.launch(debug=True)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 614
         },
         "id": "2_mFDNyB-OdN",
-        "outputId": "a36087f1-e021-49ca-aff8-c23946b0704c"
+        "outputId": "ad43dc78-cb4d-4ebc-b19f-b20d1a66949f"
       },
       "execution_count": null,
       "outputs": [
         {
-          "data": {
-            "text/html": [
-              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Applying Weight Compression <span style=\"color: #729c1f; text-decoration-color: #729c1f\">━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span> <span style=\"color: #800080; text-decoration-color: #800080\">100%</span> <span style=\"color: #0068b5; text-decoration-color: #0068b5\">156/156</span> • <span style=\"color: #0068b5; text-decoration-color: #0068b5\">0:00:15</span> • <span style=\"color: #0068b5; text-decoration-color: #0068b5\">0:00:00</span>\n",
-              "</pre>\n"
-            ],
-            "text/plain": [
-              "Applying Weight Compression \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[35m100%\u001b[0m \u001b[38;2;0;104;181m156/156\u001b[0m • \u001b[38;2;0;104;181m0:00:15\u001b[0m • \u001b[38;2;0;104;181m0:00:00\u001b[0m\n"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
-            ],
-            "text/plain": []
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
-              "</pre>\n"
-            ],
-            "text/plain": [
-              "\n"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
           "metadata": {
             "tags": null
           },
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Compiling the model to CPU ...\n"
+            "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
+            "* Running on public URL: https://9fffd64a5b71076faa.gradio.live\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
           ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div><iframe src=\"https://9fffd64a5b71076faa.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         }
       ]
     },
